--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,5 +40,6 @@ subjects:
 - !lcsh 'Egypt -- History -- 332-30 B.C. -- Fiction'
 - !lcc 'PT'
 - !lcsh 'German fiction -- Translations into Dutch'
+- GITenberg
 title: 'Klea en Irene: roman'
 url: http://www.gutenberg.org/ebooks/42867
